Changed About to FAQ page

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -20,7 +20,7 @@
         <li><a ui-sref="kegg">Kegg-map</a></li>
         <li><a ui-sref="metablomics">Metabolomics</a></li>
         <li><a ui-sref="structure">Structure-Search</a></li>
-        <li><a ui-sref="about">About</a></li>
+        <li><a ui-sref="faq">FAQs</a></li>
     </ul>
   </div>
 </nav>
