--- a/Modular/index.html
+++ b/Modular/index.html
@@ -17,10 +17,18 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a ui-sref="home">Home</a></li>
-                <li><a ui-sref="kegg">Kegg-map</a></li>
                 <li><a ui-sref="metablomics">Metabolomics</a></li>
                 <li><a ui-sref="structure">Structure-Search</a></li>
                 <li><a ui-sref="faq">FAQs</a></li>
+
+                <form class="navbar-form navbar-right" role="form">
+                <div ng-controller="mineCtl">
+            <div class="form-group">
+              <input type="text" placeholder="Quick Serach" class="form-control" ng-model ="name" ng-keypress="doQuickSearch($event)">
+            </div>
+            <button class="btn btn-primary "  ng-click="doQuickSearch(13)" ><span class="glyphicon glyphicon-search"></span>Search</button>
+            </div>
+          </form>
             </ul>
         </div>
     </nav>
@@ -30,17 +38,9 @@
             <div class="col-sm-2">
                 <div class=" affix">
                     <h2>Database</h2>
-                    <h1>{{database.name}}</h1>
-                    <div ng-controller="mineCtl">
+                    <div ng-controller="datbaseCtl">
                         <select class="form-control" ng-model="database" ng-options="d.name for d in databases"></select>
                         </br>
-                        <h2>Quick search</h2>
-                        <input type="text" ng-model ="name" ng-keypress="doQuickSearch($event)"/>
-                        </br>
-                        </br>
-                        <!-- this sloves the change DB problem. The webpage will not call ui-sref if it has not changed  so have to add the datbase to the search term then the http generated will be different -->
-                        <a class="btn  btn-primary "  ui-sref="compounds({search:name+','+database.db})"><span class="glyphicon glyphicon-search"></span>
-                            Search</a>
                     </div>
                 </div>
             </div><!-- col 2 -->
@@ -82,6 +82,8 @@
 <script src="js/kegg.js"></script>
 <script src="js/creator.js"></script>
 <script src="js/operatorCreatorClient.js"></script>
+<script src="js/databasechoice.js"></script>
+
 
 </body>
 </html>
