--- a/Modular/index.html
+++ b/Modular/index.html
@@ -58,6 +58,7 @@
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="js/lib/Lightbox_me/jquery.lightbox_me.js" type="text/javascript"></script>
 
 <!-- deps for kegg pathway widget -->
 <script src="../ui-common/functional-site/assets/js/kbclient/workspaceDeluxe1.1.js"></script>
