Added in the deps for bootstrap-tour

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="bootstrap/css/bootstrap-tour.min.css" rel="stylesheet" type="text/css"/>
     <link href="../ui-common/functional-site/assets/css/kb-visualizations.css" rel="stylesheet" type="text/css"/>
 </head>
 
@@ -54,6 +55,7 @@
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="js/lib/Lightbox_me/jquery.lightbox_me.js" type="text/javascript"></script>
+<script src="bootstrap/js/bootstrap-tour.min.js" type="text/javascript"></script>
 
 <!-- deps for kegg pathway widget -->
 <script src="../ui-common/functional-site/assets/js/kbclient/workspaceDeluxe1.1.js"></script>
