disabling webservices for now

--- a/Modular/editorws.html
+++ b/Modular/editorws.html
@@ -15,7 +15,7 @@
 			marvin.Sketch.license("./license/jj_marvin4js-license.cxl");
 			if(marvin.Sketch.isSupported()) {
 				marvin.sketcherInstance = new marvin.Sketch("sketch");
-				marvin.sketcherInstance.setServices(getDefaultServices());
+				//marvin.sketcherInstance.setServices(getDefaultServices());
 			} else {
 				alert("Cannot initiate sketcher. Current browser may not support HTML canvas or may run in Compatibility Mode.");
 			}
