more metabolomics display stuff

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <title>MINE</title>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/Gold-Miner-Icon.png">
+                               <link rel="shortcut icon" href="img/Gold-Miner-Icon.png">
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
 </head>
 
