--- a/Modular/index.html
+++ b/Modular/index.html
@@ -13,6 +13,7 @@
 
 <!-- NAVIGATION -->
 <div ng-app="app">
+<div ng-controller="cookieCtl"></div>
     <nav class="navbar navbar-default " role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -53,6 +54,7 @@
 <!-- General-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -82,5 +84,5 @@
 <script src="js/databasechoice.js"></script>
 
 
-</body>
+</body onload>
 </html>
