--- a/Modular/index.html
+++ b/Modular/index.html
@@ -28,8 +28,8 @@
             </ul>
             <form class=" navbar-form navbar-right" role="form">
                 <div ng-controller="mineCtl">
-                        <input type="text" placeholder="Quick Search" class="form-control" ng-model ="name" ng-keypress="doQuickSearch($event)">
-                        <button class="btn btn-primary "  ng-click="doQuickSearch(false)" ><span class="glyphicon glyphicon-search"></span></button>
+                        <input id="qs_text" type="text" placeholder="Quick Search" class="form-control" ng-model ="name" ng-keypress="doQuickSearch($event)">
+                        <button id="qs_btn" class="btn btn-primary "  ng-click="doQuickSearch(false)" ><span class="glyphicon glyphicon-search"></span></button>
                 </div>
             </form>
         </div>
@@ -40,7 +40,7 @@
             <div class="col-sm-2">
                 <h2>Database</h2>
                 <div ng-controller="datbaseCtl">
-                    <select class="form-control" ng-model="database" ng-options="d.name for d in databases"></select>
+                    <select id="db-select" class="form-control" ng-model="database" ng-options="d.name for d in databases"></select>
                 </div>
             </div>
             <!-- col 2 -->
@@ -82,6 +82,7 @@
 <script src="js/creator.js"></script>
 <script src="js/operatorCreatorClient.js"></script>
 <script src="js/databasechoice.js"></script>
+<script src="js/bootstrapTours.js"></script>
 
 
 </body onload>
