--- a/Modular/index.html
+++ b/Modular/index.html
@@ -42,6 +42,7 @@
                 <div ng-controller="datbaseCtl">
                     <select class="form-control" ng-model="database" ng-options="d.name for d in databases"></select>
                 </div>
+                <div ui-view = "sidebar"></div>
             </div>
             <!-- col 2 -->
             <div class="col-sm-10">
