adding metabolomics stuff

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -84,6 +84,7 @@
 <script src="js/operatorCreatorClient.js"></script>
 <script src="js/databasechoice.js"></script>
 <script src="js/bootstrapTours.js"></script>
+<script src="js/modelCtl.js"></script>
 
 
 </body onload>
