mostly fixing spelling

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -23,7 +23,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a ui-sref="home">Home</a></li>
-                <li><a ui-sref="metablomics">Metabolomics</a></li>
+                <li><a ui-sref="metabolomics">Metabolomics</a></li>
                 <li><a ui-sref="structure">Structure-Search</a></li>
                 <li><a ui-sref="faq">FAQs</a></li>
             </ul>
@@ -78,7 +78,7 @@
 <script src="js/quicksearch.js"></script>
 <script src="js/compounds.js"></script>
 <script src="js/acompound.js"></script>
-<script src="js/metablomics.js"></script>
+<script src="js/metabolomics.js"></script>
 <script src="js/structures.js"></script>
 <script src="js/kegg.js"></script>
 <script src="js/creator.js"></script>
