--- a/Modular/index.html
+++ b/Modular/index.html
@@ -23,7 +23,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a ui-sref="home">Home</a></li>
-                <li><a ui-sref="metabolomics">Metabolomics</a></li>
+                <li><a ui-sref="metabolomics" id="met-tab">Metabolomics</a></li>
                 <li><a ui-sref="structure">Structure-Search</a></li>
                 <li><a ui-sref="faq">FAQs</a></li>
             </ul>
