--- a/Modular/index.html
+++ b/Modular/index.html
@@ -60,7 +60,7 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="bower_components/d3.v3.min.js"></script>
 <script src="js/lib/Lightbox_me/jquery.lightbox_me.js" type="text/javascript"></script>
 <script src="bootstrap/js/bootstrap-tour.min.js" type="text/javascript"></script>
 
