converted to mz search w/ kovats & logP

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -6,8 +6,9 @@
                                <link rel="shortcut icon" href="img/Gold-Miner-Icon.png">
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
     <link href="bootstrap/css/bootstrap-tour.min.css" rel="stylesheet" type="text/css"/>
-    <link href="../ui-common/functional-site/assets/css/kb-visualizations.css" rel="stylesheet" type="text/css"/>
+    <!-- <link href="../ui-common/functional-site/assets/css/kb-visualizations.css" rel="stylesheet"> -->
     <link href="bower_components/ng-joyride/ng-joyride.css" rel="stylesheet">
+    <link href="bower_components/angular-rangeslider-master/angular.rangeSlider.css" rel="stylesheet">
 </head>
 
 <body>
@@ -63,7 +64,7 @@
 <script src="bower_components/d3.v3.min.js"></script>
 <script src="js/lib/Lightbox_me/jquery.lightbox_me.js" type="text/javascript"></script>
 <script src="bootstrap/js/bootstrap-tour.min.js" type="text/javascript"></script>
-
+<script src="bower_components/angular-rangeslider-master/angular.rangeSlider.js"></script>
 
 <!-- Marvin-->
 <script src="js/lib/rainbow/rainbow-custom.min.js"></script>
