--- a/Modular/index.html
+++ b/Modular/index.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-sm-2">
                 <h2>Database</h2>
-                <div ng-controller="datbaseCtl">
+                <div ng-controller="databaseCtl">
                     <select id="db-select" class="form-control" ng-model="database" ng-options="d.name for d in databases"></select>
                     <input type="text" placeholder="Enter database name" class="form-control" ng-model="otherDB" ng-show="{{databases.length == 4}}">
                 </div>
