--- a/Modular/index.html
+++ b/Modular/index.html
@@ -24,8 +24,9 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a ui-sref="home">Home</a></li>
+                <li><a ui-sref="advancedsearch" id="adv-tab">Advanced Search</a></li>
                 <li><a ui-sref="metabolomics" id="met-tab">Metabolomics</a></li>
-                <li><a ui-sref="structure" id="struct-tab">Structure-Search</a></li>
+                <li><a ui-sref="structure" id="struct-tab">Structure Search</a></li>
                 <li><a ui-sref="faq">FAQs</a></li>
             </ul>
             <form class=" navbar-form navbar-right" role="form">
