added in support for operator images

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -9,6 +9,7 @@
     <!-- <link href="../ui-common/functional-site/assets/css/kb-visualizations.css" rel="stylesheet"> -->
     <link href="bower_components/ng-joyride/ng-joyride.css" rel="stylesheet">
     <link href="bower_components/angular-rangeslider-master/angular.rangeSlider.css" rel="stylesheet">
+    <link href="custom.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
