basic operator page

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -83,6 +83,7 @@
 <script src="js/operatorCreatorClient.js"></script>
 <script src="js/bootstrapTours.js"></script>
 <script src="js/modelCtl.js"></script>
+<script src="js/operator.js"></script>
 
 
 </body onload>
