added in quick search unit tests

--- a/Modular/index.html
+++ b/Modular/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="app">
 <head>
     <title>MINE</title>
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/Gold-Miner-Icon.png">
@@ -15,8 +15,6 @@
 <body>
 
 <!-- NAVIGATION -->
-<div ng-app="app">
-<div ng-controller="cookieCtl"></div>
     <nav class="navbar navbar-default " role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -54,7 +52,6 @@
             </div>
         </div>
     </div>
-</div>
 
 <!-- General-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
