--- a/Modular/Beta/index.html
+++ b/Modular/Beta/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+
 <!-- NAVIGATION -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -35,15 +36,21 @@
             </form>
         </div>
     </nav>
-
     <div class="container">
         <div class="row">
             <div class="col-lg-2">
                 <h2>Database</h2>
                 <div ng-controller="databaseCtl">
                     <select id="db-select" class="form-control" ng-model="database" ng-options="d.name for d in databases"></select>
+
                 </div>
                 <div ui-view = "sidebar"></div>
+                <!--[if IE]>
+                    <h4 style="color: #b41b16;">
+                    This web application does not officially support Internet Explorer and some elements may not render
+                    or function correctly in this environment. For best performance, utilize the Chrome browser.
+                    </h4>
+                <![endif]-->
             </div>
             <!-- col 2 -->
             <div class="col-lg-10">
