--- a/Modular/Beta/index.html
+++ b/Modular/Beta/index.html
@@ -10,6 +10,7 @@
     <link href="bower_components/ng-joyride/ng-joyride.css" rel="stylesheet">
     <link href="bower_components/angular-rangeslider-master/angular.rangeSlider.css" rel="stylesheet">
     <link href="custom.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="bower_components/selectize/dist/css/selectize.bootstrap3.css" />
 </head>
 <body>
 
@@ -64,6 +65,7 @@
 <script src="bootstrap/js/bootstrap-tour.min.js" type="text/javascript"></script>
 <script src="bower_components/angular-rangeslider-master/angular.rangeSlider.js"></script>
 <script src="bower_components/ng-joyride/ng-joyride.js"></script>
+<script src="bower_components/selectize/dist/js/standalone/selectize.js"></script>
 
 <!--Analytics-->
 <script src="bower_components/angulartics/dist/angulartics.min.js"></script>
@@ -95,5 +97,5 @@
 <script src="js/operator.js"></script>
 <script src="js/top30.js"></script>
 
-</body onload>
+</body>
 </html>
