--- a/Modular/Beta/index.html
+++ b/Modular/Beta/index.html
@@ -9,7 +9,7 @@
     <link href="bower_components/ng-joyride/ng-joyride.css" rel="stylesheet">
     <link href="bower_components/angular-rangeslider-master/angular.rangeSlider.css" rel="stylesheet">
     <link href="custom.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" type="text/css" href="bower_components/selectize/dist/css/selectize.bootstrap3.css" />
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css" />
 </head>
 <body>
 
@@ -64,7 +64,7 @@
 <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js" type="text/javascript"></script>
 <script src="bower_components/angular-rangeslider-master/angular.rangeSlider.js"></script>
 <script src="bower_components/ng-joyride/ng-joyride.js"></script>
-<script src="bower_components/selectize/dist/js/standalone/selectize.js"></script>
+<script src="bower_components/angular-ui-select/dist/select.min.js"></script>
 
 <!--Analytics-->
 <script src="bower_components/angulartics/dist/angulartics.min.js"></script>
